--- a/T_WPF/龙马_WPF上位机_MES实战_通信协议/ProductMonitor/ProductMonitor/Dictionary/OperateBtnStyleDic.xaml
+++ b/T_WPF/龙马_WPF上位机_MES实战_通信协议/ProductMonitor/ProductMonitor/Dictionary/OperateBtnStyleDic.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="Button" x:Key="OperateBtnStyle">
         <Setter Property="Width" Value="40"></Setter>
-        <Setter Property="Background" Value="#122454"></Setter>
+        <Setter Property="Background" Value="#11ffffff"></Setter>
         <Setter Property="Foreground" Value="GreenYellow"></Setter>
         <Setter Property="FontFamily" Value="../Resources/Fonts/#iconfont"></Setter>
         <Setter Property="Template">
