--- a/T_WPF/龙马_WPF上位机_MES实战_通信协议/ProductMonitor/ProductMonitor/MainWindow.xaml
+++ b/T_WPF/龙马_WPF上位机_MES实战_通信协议/ProductMonitor/ProductMonitor/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ProductMonitor"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" 
-        Title="生产监控平台" Height="750" Width="1200">
+        Title="Production Monitoring Platform" Height="750" Width="1200">
     <WindowChrome.WindowChrome>
         <WindowChrome GlassFrameThickness="0"></WindowChrome>
         <!--标题栏隐藏-->
@@ -40,8 +40,8 @@
                 <Image Source="/Resources/Images/Logo.png" Margin="0, 5"/>
                 <!--第二列-->
                 <StackPanel Orientation="Vertical" Grid.Column="1" VerticalAlignment="Center">
-                    <TextBlock Text="生产监控平台" Foreground="White" FontSize="16"></TextBlock>
-                    <TextBlock Text="zzzzzzzzzzzzzzz" Foreground="White" FontSize="12" Margin="0, 4, 0, 0"></TextBlock>
+                    <TextBlock Text="Production Monitoring Platform" FontFamily="Arial Bold" Foreground="gold" FontSize="16"></TextBlock>
+                    <TextBlock Text="ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ" Foreground="White" FontSize="12" Margin="0, 4, 0, 0"></TextBlock>
                 </StackPanel>
                 <!--第三列-->
                 <Grid Grid.Column="2">
@@ -87,7 +87,7 @@
                         </VisualBrush>
                     </Border.Background>
                 </Border>
-                <TextBlock Grid.Column="1" Text="博格华纳汽车零部件（江苏）有限公司" Foreground="White" FontSize="18" FontWeight="Bold"></TextBlock>
+                <TextBlock Grid.Column="1" Text="XXXXXXXXXXXXXXXXXXXXX Co,.Ltd" Foreground="White" FontSize="18" FontWeight="Bold"></TextBlock>
             </Grid>
         </Border>
     </Grid>
