--- a/T_WPF/龙马_WPF上位机_MES实战_通信协议/ProductMonitor/ProductMonitor/MainWindow.xaml
+++ b/T_WPF/龙马_WPF上位机_MES实战_通信协议/ProductMonitor/ProductMonitor/MainWindow.xaml
@@ -40,8 +40,8 @@
                 <Image Source="/Resources/Images/Logo.png" Margin="0, 5"/>
                 <!--第二列-->
                 <StackPanel Orientation="Vertical" Grid.Column="1" VerticalAlignment="Center">
-                    <TextBlock Text="生产监控平台" Foreground="White" FontSize="16"></TextBlock>
-                    <TextBlock Text="zzzzzzzzzzzzzzz" Foreground="White" FontSize="12" Margin="0, 4, 0, 0"></TextBlock>
+                    <TextBlock Text="Production Monitoring System" Foreground="gold" FontFamily="arial bold" FontSize="16"></TextBlock>
+                    <TextBlock Text="ZZZZZZZZZZZZZZZ" Foreground="White" FontSize="12" Margin="0, 4, 0, 0"></TextBlock>
                 </StackPanel>
                 <!--第三列-->
                 <Grid Grid.Column="2">
@@ -87,7 +87,7 @@
                         </VisualBrush>
                     </Border.Background>
                 </Border>
-                <TextBlock Grid.Column="1" Text="博格华纳汽车零部件（江苏）有限公司" Foreground="White" FontSize="18" FontWeight="Bold"></TextBlock>
+                <TextBlock Grid.Column="1" Text="XXXXXXXXXXXXXXX Co,.Ltd" Foreground="White" FontSize="18" FontWeight="Bold"></TextBlock>
             </Grid>
         </Border>
     </Grid>
