--- a/R-Blazor/BlazorApp2/BlazorApp2/Components/Pages/Counter.razor
+++ b/R-Blazor/BlazorApp2/BlazorApp2/Components/Pages/Counter.razor
@@ -16,12 +16,20 @@
 
 <MyButton OnClick="IncrementCount2" class="btn btn-success">MyButton</MyButton>
 
+<div class="mt-3">
+    @* <input value="@text" @oninput="OnInput" /> *@
+    <input @bind="text" @bind:event="oninput" @bind:after="Search" />
+
+    <button @onclick="() => text = string.Empty">Clear</button>
+    <p>Text: @text</p>
+</div>
 
 @* 事件处理 *@
 <div class="mt-3">
     <br />
     <input @oninput="OnInput" />
     <p>Text: @text</p>
+    <p>SearchResult: @searchResult</p>
 </div>
 
 
@@ -46,6 +54,8 @@
     private int currentCount = 0;
 
     string text = "";
+
+    string searchResult = "";
 
     string divText = "Mouse outside";
 
@@ -73,4 +83,12 @@
     private void OnInput(ChangeEventArgs e) => text = (string)e.Value!;
     private void MouseOver(MouseEventArgs e) => divText = "Mouse over";
     private void MouseOut(MouseEventArgs e) => divText = "Mouse outside";
+
+    async Task Search()
+    {
+        searchResult = "Searching...";
+        await Task.Delay(1000);
+        searchResult = $"Found: {Random.Shared.Next()} Results";
+
+    }
 }
